// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when domain entity subclass extends non existent entity should have validation failure -> message 1`] = `"Domain Entity Subclass SubclassName based on EntityName tries to rename PropertyName1 which is not part of the identity."`;

exports[`when domain entity subclass extends non existent entity should have validation failure -> sourceMap 1`] = `
Object {
  "column": 32,
  "line": 8,
  "tokenText": "PropertyName1",
}
`;

exports[`when domain entity subclass renames base identity that does not exist should have validation failure -> message 1`] = `"Domain Entity Subclass SubclassName based on EntityName tries to rename PropertyName3 which is not part of the identity."`;

exports[`when domain entity subclass renames base identity that does not exist should have validation failure -> sourceMap 1`] = `
Object {
  "column": 32,
  "line": 16,
  "tokenText": "PropertyName3",
}
`;

exports[`when domain entity subclass renames base property that is not identity should have validation failure -> message 1`] = `"Domain Entity Subclass SubclassName based on EntityName tries to rename PropertyName1 which is not part of the identity."`;

exports[`when domain entity subclass renames base property that is not identity should have validation failure -> sourceMap 1`] = `
Object {
  "column": 32,
  "line": 16,
  "tokenText": "PropertyName1",
}
`;
